--- a/3_semantic_segmentation/3-7_PSPNet_training.ipynb
+++ b/3_semantic_segmentation/3-7_PSPNet_training.ipynb
@@ -30,9 +30,45 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!git clone https://github.com/YutaroOgawa/pytorch_advanced.git\n",
+        "!git clone https://github.com/rin-nishikawa/internship.git\n",
         "%cd \"internship\"\n",
         "%cd \"3_semantic_segmentation\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import urllib.request\n",
+        "import zipfile\n",
+        "import tarfile"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# フォルダ「data」が存在しない場合は作成する\n",
+        "data_dir = \"./data/\"\n",
+        "if not os.path.exists(data_dir):\n",
+        "    os.mkdir(data_dir)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# フォルダ「weights」が存在しない場合は作成する\n",
+        "weights_dir = \"./weights/\"\n",
+        "if not os.path.exists(weights_dir):\n",
+        "    os.mkdir(weights_dir)"
       ]
     },
     {
