add weights URL

--- a/3_semantic_segmentation/3-7_PSPNet_training.ipynb
+++ b/3_semantic_segmentation/3-7_PSPNet_training.ipynb
@@ -72,6 +72,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# フォルダ「weights」にネットワークの初期値として使用する「pspnet50_ADE20K.pth」を\n",
+        "# 筆者のGoogle Driveから手動でダウンロードする\n",
+        "# （西川メモ）Googleコラボに入れようとすると15分くらいかかる！\n",
+        "    \n",
+        "https://drive.google.com/open?id=12eN6SpnawYuQmD1k9VgVW3QSgPR6hICc"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
