--- a/1_image_classification/1_3_transfer_learning_on_GoogleColab.ipynb
+++ b/1_image_classification/1_3_transfer_learning_on_GoogleColab.ipynb
@@ -943,7 +943,7 @@
       "source": [
         "# 学習済みのVGG-16モデルをロード\n",
         "# VGG-16モデルのインスタンスを生成\n",
-        "use_pretrained = True  # 学習済みのパラメータを使用\n",
+        "use_pretrained = False  # 学習済みのパラメータを使用\n",
         "net = models.vgg16(pretrained=use_pretrained)\n",
         "\n",
         "# VGG16の最後の出力層の出力ユニットをアリとハチの2つに付け替える\n",
