--- a/1_image_classification/1_3_transfer_learning_on_GoogleColab.ipynb
+++ b/1_image_classification/1_3_transfer_learning_on_GoogleColab.ipynb
@@ -211,8 +211,8 @@
         "if not os.path.exists(data_dir):\n",
         "    os.mkdir(data_dir)\n",
         "\n",
-        "if not os.path.exists(\"weights\"):\n",
-        "    os.mkdir(data_dir)\n",
+        "if not os.path.exists(\"./weights/\"):\n",
+        "    os.mkdir(\"./weights/\")\n",
         "\n",
         "# url = \"https://s3.amazonaws.com/deep-learning-models/image-models/imagenet_class_index.json\"\n",
         "# save_path = os.path.join(data_dir, \"imagenet_class_index.json\")\n",
