ハンズオンコメントアウト追記

--- a/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -925,6 +925,8 @@
         }
       ],
       "source": [
+        "####西川による変更####\n",
+        "\n",
         "# # 転移学習で学習させるパラメータを、変数params_to_updateに格納する\n",
         "# params_to_update = []\n",
         "\n",
@@ -942,7 +944,9 @@
         "\n",
         "# # params_to_updateの中身を確認\n",
         "# print(\"-----------\")\n",
-        "# print(params_to_update)\n"
+        "# print(params_to_update)\n",
+        "\n",
+        "########\n"
       ]
     },
     {
