--- a/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -714,6 +714,7 @@
       "outputs": [],
       "source": [
         "net.eval()  # 推論モードに設定\n",
+        "net.to(device)\n",
         "\n",
         "# モデルのネットワーク構成を出力\n",
         "print(net)"
@@ -763,7 +764,7 @@
         "        predicted_label_name : str\n",
         "            最も予測確率が高いラベルの名前\n",
         "        \"\"\"\n",
-        "        maxid = np.argmax(out.detach().numpy())\n",
+        "        maxid = np.argmax(out.detach().cpu().numpy())\n",
         "        predicted_label_name = self.class_index[str(maxid)][1]\n",
         "\n",
         "        return predicted_label_name\n"
@@ -795,6 +796,7 @@
         "transform = ImageTransform(resize, mean, std)  # 前処理クラス作成\n",
         "img_transformed = transform(img)  # torch.Size([3, 224, 224])\n",
         "inputs = img_transformed.unsqueeze_(0)  # torch.Size([1, 3, 224, 224])\n",
+        "inputs=inputs.to(device)\n",
         "\n",
         "# モデルに入力し、モデル出力をラベルに変換する\n",
         "out = net(inputs)  # torch.Size([1, 1000])\n",
