prediction数値出した

--- a/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1020,7 +1020,7 @@
         "\n",
         "        Parameters\n",
         "        ----------\n",
-        "        out : torch.Size([1, 1000])\n",
+        "        out : torch.Size([1, 2])\n",
         "            Netからの出力。\n",
         "\n",
         "        Returns\n",
@@ -1028,7 +1028,10 @@
         "        predicted_label_name : str\n",
         "            最も予測確率が高いラベルの名前\n",
         "        \"\"\"\n",
+        "        print(\"アリであると推測：\"+str(out.detach().cpu().numpy()[0][0]))\n",
+        "        print(\"ハチであると推測：\"+str(out.detach().cpu().numpy()[0][1]))\n",
         "        maxid = np.argmax(out.detach().cpu().numpy())\n",
+        "\n",
         "        predicted_label_name = self.class_index[str(maxid)][1]\n",
         "\n",
         "        return predicted_label_name\n"
@@ -1043,7 +1046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [
         {
@@ -1060,7 +1063,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "入力画像の予測結果： ants\n"
+            "アリであると推測：-0.15347786\n",
+            "ハチであると推測：-0.02857567\n",
+            "入力画像の予測結果： bees\n"
           ]
         }
       ],
