正解度のグラフgpu向けに改ざん

--- a/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/1_3_transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -906,7 +906,10 @@
         "            print('{} Loss: {:.4f} Acc: {:.4f}'.format(\n",
         "                phase, epoch_loss, epoch_acc))\n",
         "            \n",
-        "            acc_history[phase].append(epoch_acc)\n",
+        "            if (epoch == 0) and (phase == 'val'):\n",
+        "              continue\n",
+        "            else:\n",
+        "              acc_history[phase].append(epoch_acc.detach().cpu().numpy())\n",
         "    return acc_history\n"
       ]
     },
@@ -984,7 +987,7 @@
       ],
       "source": [
         "# 学習・検証を実行する\n",
-        "num_epochs=2\n",
+        "num_epochs=1\n",
         "acc_history = {'train': [], 'val': []}\n",
         "acc_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs=num_epochs)"
       ]
