--- a/1_image_classification/transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -37,6 +37,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "!git clone https://github.com/rin-nishikawa/internship.git\n",
         "%cd \"internship\"\n",
         "%cd \"1_image_classification\""
