ハンズオンファイル作成

--- a/1_image_classification/learning_on_GoogleColab_handson.ipynb
+++ b/1_image_classification/learning_on_GoogleColab_handson.ipynb
@@ -37,6 +37,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "!git clone https://github.com/rin-nishikawa/internship.git\n",
         "%cd \"internship\"\n",
         "%cd \"1_image_classification\""
@@ -89,22 +98,19 @@
         "if not os.path.exists(\"./weights/\"):\n",
         "    os.mkdir(\"./weights/\")\n",
         "\n",
-        "# url = \"https://s3.amazonaws.com/deep-learning-models/image-models/imagenet_class_index.json\"\n",
-        "# save_path = os.path.join(data_dir, \"imagenet_class_index.json\")\n",
+        "url = \"https://download.pytorch.org/tutorial/hymenoptera_data.zip\"\n",
+        "save_path = os.path.join(data_dir, \"hymenoptera_data.zip\")\n",
         "\n",
-        "# if not os.path.exists(save_path):\n",
-        "#     urllib.request.urlretrieve(url, save_path)\n",
+        "if not os.path.exists(save_path):\n",
+        "    urllib.request.urlretrieve(url, save_path)\n",
         "\n",
+        "    # ZIPファイルを読み込み\n",
+        "    zip = zipfile.ZipFile(save_path)\n",
+        "    zip.extractall(data_dir)  # ZIPを解凍\n",
+        "    zip.close()  # ZIPファイルをクローズ\n",
         "\n",
-        "zip_path = os.path.join(data_dir, \"catdog.zip\")\n",
-        "save_path = os.path.join(data_dir, \"catdog/\")\n",
-        "# ZIPファイルを読み込み\n",
-        "zip = zipfile.ZipFile(zip_path)\n",
-        "zip.extractall(save_path)  # ZIPを解凍\n",
-        "zip.close()  # ZIPファイルをクローズ\n",
-        "# ZIPファイルを消去\n",
-        "os.remove(zip_path)\n",
-        "os.rename(\"./data/catdog/test/\", \"./data/catdog/val/\")"
+        "    # ZIPファイルを消去\n",
+        "    os.remove(save_path)"
       ]
     },
     {
@@ -213,10 +219,10 @@
         "    def __init__(self, resize, mean, std):\n",
         "        self.data_transform = {\n",
         "            'train': transforms.Compose([\n",
-        "                transforms.RandomResizedCrop(resize, scale=(0.5, 1.0)),  # データオーギュメンテーション\n",
-        "                transforms.RandomHorizontalFlip(),  # データオーギュメンテーション\n",
+        "                # transforms.RandomResizedCrop(resize, scale=(0.5, 1.0)),  # データオーギュメンテーション\n",
+        "                # transforms.RandomHorizontalFlip(),  # データオーギュメンテーション\n",
         "                transforms.ToTensor(),  # テンソルに変換\n",
-        "                transforms.Normalize(mean, std)  # 標準化\n",
+        "                # transforms.Normalize(mean, std)  # 標準化\n",
         "            ]),\n",
         "            'val': transforms.Compose([\n",
         "                transforms.Resize(resize),  # リサイズ\n",
@@ -314,7 +320,7 @@
         "        データへのパスを格納したリスト\n",
         "    \"\"\"\n",
         "\n",
-        "    rootpath = \"./data/catdog/\"\n",
+        "    rootpath = \"./data/hymenoptera_data/\"\n",
         "    target_path = osp.join(rootpath+phase+'/**/*.jpg')\n",
         "\n",
         "    path_list = []  # ここに格納する\n",
@@ -389,14 +395,14 @@
         "\n",
         "        # 画像のラベルをファイル名から抜き出す\n",
         "        if self.phase == \"train\":\n",
-        "            label = img_path[20:24]\n",
+        "            label = img_path[30:34]\n",
         "        elif self.phase == \"val\":\n",
-        "            label = img_path[18:22]\n",
+        "            label = img_path[28:32]\n",
         "\n",
         "        # ラベルを数値に変更する\n",
-        "        if label == \"cats\":\n",
+        "        if label == \"ants\":\n",
         "            label = 0\n",
-        "        elif label == \"dogs\":\n",
+        "        elif label == \"bees\":\n",
         "            label = 1\n",
         "\n",
         "        return img_transformed, label\n",
@@ -445,14 +451,14 @@
       "outputs": [],
       "source": [
         "# ミニバッチのサイズを指定\n",
-        "batch_size = 32\n",
+        "batch_size = ??\n",
         "\n",
         "# DataLoaderを作成\n",
         "train_dataloader = torch.utils.data.DataLoader(\n",
-        "    train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "    train_dataset, batch_size=batch_size, shuffle=??)\n",
         "\n",
         "val_dataloader = torch.utils.data.DataLoader(\n",
-        "    val_dataset, batch_size=batch_size, shuffle=False)\n",
+        "    val_dataset, batch_size=batch_size, shuffle=??)\n",
         "\n",
         "# 辞書型変数にまとめる\n",
         "dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
@@ -527,7 +533,7 @@
       "outputs": [],
       "source": [
         "# VGG16の最後の出力層の出力ユニットをアリとハチの2つに付け替える\n",
-        "net.classifier[6] = nn.Linear(in_features=4096, out_features=2)"
+        "net.classifier[6] = nn.Linear(in_features=4096, out_features=??)"
       ]
     },
     {
@@ -581,53 +587,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oxkNa9LvlWqP",
-        "outputId": "a480e08e-674e-45c3-c95d-b8c2ff848608"
-      },
-      "outputs": [],
-      "source": [
-        "####西川による変更####\n",
-        "\n",
-        "# # 転移学習で学習させるパラメータを、変数params_to_updateに格納する\n",
-        "# params_to_update = []\n",
-        "\n",
-        "# # 学習させるパラメータ名\n",
-        "# update_param_names = [\"classifier.6.weight\", \"classifier.6.bias\"]\n",
-        "\n",
-        "# # 学習させるパラメータ以外は勾配計算をなくし、変化しないように設定\n",
-        "# for name, param in net.named_parameters():\n",
-        "#     if name in update_param_names:\n",
-        "#         param.requires_grad = True\n",
-        "#         params_to_update.append(param)\n",
-        "#         print(name)\n",
-        "#     else:\n",
-        "#         param.requires_grad = False\n",
-        "\n",
-        "# # params_to_updateの中身を確認\n",
-        "# print(\"-----------\")\n",
-        "# print(params_to_update)\n",
-        "\n",
-        "########\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "lDfKFIDglWqP"
       },
       "outputs": [],
       "source": [
         "# 最適化手法の設定\n",
-        "\n",
-        "####西川による修正####\n",
-        "# optimizer = optim.SGD(params=params_to_update, lr=0.001, momentum=0.9)\n",
-        "########\n",
-        "\n",
-        "optimizer = optim.SGD(params=net.parameters(), lr=0.001, momentum=0.9)\n"
+        "optimizer = optim.SGD(params=net.parameters(), lr=0.001, momentum=0.9)"
       ]
     },
     {
@@ -732,7 +697,7 @@
       "outputs": [],
       "source": [
         "# 学習・検証を実行する\n",
-        "num_epochs=1\n",
+        "num_epochs=30\n",
         "acc_history = {'train': [], 'val': []}\n",
         "acc_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs=num_epochs)"
       ]
@@ -772,59 +737,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# ILSVRCのラベル情報をロードし辞書型変数を生成します\n",
-        "ILSVRC_class_index = {'0': ['n02219486', 'cats'],'1': ['n02206856', 'dogs']}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# 出力結果からラベルを予測する後処理クラス\n",
-        "class ILSVRCPredictor():\n",
-        "    \"\"\"\n",
-        "    ILSVRCデータに対するモデルの出力からラベルを求める。\n",
-        "\n",
-        "    Attributes\n",
-        "    ----------\n",
-        "    class_index : dictionary\n",
-        "            クラスindexとラベル名を対応させた辞書型変数。\n",
-        "    \"\"\"\n",
-        "\n",
-        "    def __init__(self, class_index):\n",
-        "        self.class_index = class_index\n",
-        "\n",
-        "    def predict_max(self, out):\n",
-        "        \"\"\"\n",
-        "        確率最大のILSVRCのラベル名を取得する。\n",
-        "\n",
-        "        Parameters\n",
-        "        ----------\n",
-        "        out : torch.Size([1, 2])\n",
-        "            Netからの出力。\n",
-        "\n",
-        "        Returns\n",
-        "        -------\n",
-        "        predicted_label_name : str\n",
-        "            最も予測確率が高いラベルの名前\n",
-        "        \"\"\"\n",
-        "        print(\"アリであると推測：\"+str(out.detach().cpu().numpy()[0][0]))\n",
-        "        print(\"ハチであると推測：\"+str(out.detach().cpu().numpy()[0][1]))\n",
-        "        maxid = np.argmax(out.detach().cpu().numpy())\n",
-        "\n",
-        "        predicted_label_name = self.class_index[str(maxid)][1]\n",
-        "\n",
-        "        return predicted_label_name\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -837,9 +749,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# ILSVRCPredictorのインスタンスを生成します\n",
-        "predictor = ILSVRCPredictor(ILSVRC_class_index)\n",
-        "\n",
         "# 入力画像を読み込む\n",
         "####演習####\n",
         "image_file_path = './data/b.jpeg'\n",
@@ -857,11 +766,18 @@
         "inputs=inputs.to(device)\n",
         "\n",
         "# モデルに入力し、モデル出力をラベルに変換する\n",
-        "out = net(inputs)  # torch.Size([1, 1000])\n",
-        "result = predictor.predict_max(out)\n",
+        "out = net(inputs)  # torch.Size([1, 2])\n",
+        "print(\"アリであると推測：\"+str(out.detach().cpu().numpy()[0][0]))\n",
+        "print(\"ハチであると推測：\"+str(out.detach().cpu().numpy()[0][1]))\n",
+        "maxid = np.argmax(out.detach().cpu().numpy())\n",
+        "\n",
+        "# クラス名定義\n",
+        "class_index = {'0': 'ants','1': 'bees'}\n",
+        "\n",
+        "predicted_label_name = class_index[str(maxid)]\n",
         "\n",
         "# 予測結果を出力する\n",
-        "print(\"入力画像の予測結果：\", result)"
+        "print(\"入力画像の予測結果：\", predicted_label_name)"
       ]
     },
     {
