--- a/1_image_classification/learning_on_GoogleColab_handson.ipynb
+++ b/1_image_classification/learning_on_GoogleColab_handson.ipynb
@@ -461,13 +461,7 @@
         "    val_dataset, batch_size=batch_size, shuffle=??)\n",
         "\n",
         "# 辞書型変数にまとめる\n",
-        "dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
-        "\n",
-        "# 動作確認\n",
-        "batch_iterator = iter(dataloaders_dict[\"train\"])  # イテレータに変換\n",
-        "inputs, labels = next(batch_iterator)  # 1番目の要素を取り出す\n",
-        "print(inputs.size())\n",
-        "print(labels)\n"
+        "dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n"
       ]
     },
     {
