転移学習コメントアウト消した

--- a/1_image_classification/transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -518,7 +518,7 @@
       "source": [
         "# 学習済みのVGG-16モデルをロード\n",
         "# VGG-16モデルのインスタンスを生成\n",
-        "use_pretrained = False  # 未学習パラメータを使用\n",
+        "use_pretrained = True  # 未学習パラメータを使用\n",
         "####演習####\n",
         "net = models.vgg16(pretrained=use_pretrained)\n",
         "\n",
@@ -595,24 +595,24 @@
       },
       "outputs": [],
       "source": [
-        "# # 転移学習で学習させるパラメータを、変数params_to_updateに格納する\n",
-        "# params_to_update = []\n",
+        "# 転移学習で学習させるパラメータを、変数params_to_updateに格納する\n",
+        "params_to_update = []\n",
         "\n",
-        "# # 学習させるパラメータ名\n",
-        "# update_param_names = [\"classifier.6.weight\", \"classifier.6.bias\"]\n",
+        "# 学習させるパラメータ名\n",
+        "update_param_names = [\"classifier.6.weight\", \"classifier.6.bias\"]\n",
         "\n",
-        "# # 学習させるパラメータ以外は勾配計算をなくし、変化しないように設定\n",
-        "# for name, param in net.named_parameters():\n",
-        "#     if name in update_param_names:\n",
-        "#         param.requires_grad = True\n",
-        "#         params_to_update.append(param)\n",
-        "#         print(name)\n",
-        "#     else:\n",
-        "#         param.requires_grad = False\n",
+        "# 学習させるパラメータ以外は勾配計算をなくし、変化しないように設定\n",
+        "for name, param in net.named_parameters():\n",
+        "    if name in update_param_names:\n",
+        "        param.requires_grad = True\n",
+        "        params_to_update.append(param)\n",
+        "        print(name)\n",
+        "    else:\n",
+        "        param.requires_grad = False\n",
         "\n",
-        "# # params_to_updateの中身を確認\n",
-        "# print(\"-----------\")\n",
-        "# print(params_to_update)"
+        "# params_to_updateの中身を確認\n",
+        "print(\"-----------\")\n",
+        "print(params_to_update)"
       ]
     },
     {
@@ -625,9 +625,9 @@
       "source": [
         "# 最適化手法の設定\n",
         "\n",
-        "# optimizer = optim.SGD(params=params_to_update, lr=0.001, momentum=0.9)\n",
+        "optimizer = optim.SGD(params=params_to_update, lr=0.001, momentum=0.9)\n",
         "\n",
-        "optimizer = optim.SGD(params=net.parameters(), lr=0.001, momentum=0.9)\n"
+        "# optimizer = optim.SGD(params=net.parameters(), lr=0.001, momentum=0.9)\n"
       ]
     },
     {
@@ -732,7 +732,7 @@
       "outputs": [],
       "source": [
         "# 学習・検証を実行する\n",
-        "num_epochs=1\n",
+        "num_epochs=30\n",
         "acc_history = {'train': [], 'val': []}\n",
         "acc_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs=num_epochs)"
       ]
