岩崎さん二回目レビュー反映

--- a/1_image_classification/learning_on_GoogleColab_handson.ipynb
+++ b/1_image_classification/learning_on_GoogleColab_handson.ipynb
@@ -37,6 +37,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# gpuの情報を見る\n",
         "!nvidia-smi"
       ]
     },
@@ -46,6 +47,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# 今回ハンズオンで使うフォルダをギットクローンする\n",
         "!git clone https://github.com/rin-nishikawa/internship.git\n",
         "%cd \"internship\"\n",
         "%cd \"1_image_classification\""
@@ -57,6 +59,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# 1_image_classificationフォルダ直下を閲覧\n",
         "!ls"
       ]
     },
@@ -91,13 +94,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# dataフォルダ作成\n",
         "data_dir = \"./data/\"\n",
         "if not os.path.exists(data_dir):\n",
         "    os.mkdir(data_dir)\n",
         "\n",
+        "# weightsフォルダ作成\n",
         "if not os.path.exists(\"./weights/\"):\n",
         "    os.mkdir(\"./weights/\")\n",
         "\n",
+        "# dataフォルダ下にhymenoptera_dataフォルダ（アリとハチのデータセット）を置く。\n",
         "url = \"https://download.pytorch.org/tutorial/hymenoptera_data.zip\"\n",
         "save_path = os.path.join(data_dir, \"hymenoptera_data.zip\")\n",
         "\n",
@@ -167,6 +173,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# テンソルのデバイスをgpuにセット\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(\"使用デバイス：\", device)"
       ]
@@ -609,7 +616,7 @@
         "# モデルを学習させる関数を作成\n",
         "\n",
         "\n",
-        "def train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs):\n",
+        "def train_model(net, dataloaders_dict, criterion, optimizer, acc_history, loss_history, num_epochs):\n",
         "\n",
         "    # GPUが使えるかを確認\n",
         "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -675,7 +682,8 @@
         "              continue\n",
         "            else:\n",
         "              acc_history[phase].append(epoch_acc.detach().cpu().numpy())\n",
-        "    return acc_history\n"
+        "              loss_history[phase].append(epoch_loss)\n",
+        "    return acc_history,loss_history"
       ]
     },
     {
@@ -693,7 +701,8 @@
         "# 学習・検証を実行する\n",
         "num_epochs=30\n",
         "acc_history = {'train': [], 'val': []}\n",
-        "acc_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs=num_epochs)"
+        "loss_history = {'train': [], 'val': []}\n",
+        "acc_history,loss_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, loss_history, num_epochs=num_epochs)"
       ]
     },
     {
@@ -702,12 +711,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# １エポック毎の正解度、ロスのグラフを表示\n",
         "fig = plt.figure()\n",
-        "ax = fig.add_subplot()\n",
-        "ax.plot(acc_history['train'], label='train')\n",
-        "ax.plot(acc_history['val'], label='val')\n",
-        "ax.legend()\n",
-        "ax.set_ylim(0, 1)\n",
+        "ax1 = fig.add_subplot(1, 2, 1)\n",
+        "ax1.plot(acc_history['train'], label='train')\n",
+        "ax1.plot(acc_history['val'], label='val')\n",
+        "ax1.legend()\n",
+        "ax1.set_ylim(0, 1)\n",
+        "ax1.set_title(\"accuracy\")\n",
+        "\n",
+        "ax2 = fig.add_subplot(1, 2, 2)\n",
+        "ax2.plot(loss_history['train'], label='train')\n",
+        "ax2.plot(loss_history['val'], label='val')\n",
+        "ax2.legend()\n",
+        "ax2.set_ylim(0, 1)\n",
+        "ax2.set_title(\"loss\")\n",
         "fig.show()"
       ]
     },
