lossのグラフ追加

--- a/1_image_classification/transfer_learning_on_GoogleColab_handson_gt.ipynb
+++ b/1_image_classification/transfer_learning_on_GoogleColab_handson_gt.ipynb
@@ -650,7 +650,7 @@
         "# モデルを学習させる関数を作成\n",
         "\n",
         "\n",
-        "def train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs):\n",
+        "def train_model(net, dataloaders_dict, criterion, optimizer, acc_history, loss_history, num_epochs):\n",
         "\n",
         "    # GPUが使えるかを確認\n",
         "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -716,7 +716,8 @@
         "              continue\n",
         "            else:\n",
         "              acc_history[phase].append(epoch_acc.detach().cpu().numpy())\n",
-        "    return acc_history\n"
+        "              loss_history[phase].append(epoch_loss)\n",
+        "    return acc_history,loss_history"
       ]
     },
     {
@@ -734,7 +735,8 @@
         "# 学習・検証を実行する\n",
         "num_epochs=30\n",
         "acc_history = {'train': [], 'val': []}\n",
-        "acc_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, num_epochs=num_epochs)"
+        "loss_history = {'train': [], 'val': []}\n",
+        "acc_history,loss_history = train_model(net, dataloaders_dict, criterion, optimizer, acc_history, loss_history, num_epochs=num_epochs)"
       ]
     },
     {
@@ -743,12 +745,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# １エポック毎の正解度、ロスのグラフを表示\n",
         "fig = plt.figure()\n",
-        "ax = fig.add_subplot()\n",
-        "ax.plot(acc_history['train'], label='train')\n",
-        "ax.plot(acc_history['val'], label='val')\n",
-        "ax.legend()\n",
-        "ax.set_ylim(0, 1)\n",
+        "ax1 = fig.add_subplot(1, 2, 1)\n",
+        "ax1.plot(acc_history['train'], label='train')\n",
+        "ax1.plot(acc_history['val'], label='val')\n",
+        "ax1.legend()\n",
+        "ax1.set_ylim(0, 1)\n",
+        "ax1.set_title(\"accuracy\")\n",
+        "\n",
+        "ax2 = fig.add_subplot(1, 2, 2)\n",
+        "ax2.plot(loss_history['train'], label='train')\n",
+        "ax2.plot(loss_history['val'], label='val')\n",
+        "ax2.legend()\n",
+        "ax2.set_ylim(0, 1)\n",
+        "ax2.set_title(\"loss\")\n",
         "fig.show()"
       ]
     },
